--- a/package.json
+++ b/package.json
@@ -5,18 +5,39 @@
   "version": "0.1.0",
   "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@fortawesome/fontawesome-free-brands": "^5.0.13",
+    "@fortawesome/fontawesome-svg-core": "^1.2.32",
+    "@fortawesome/free-solid-svg-icons": "^5.15.1",
+    "@fortawesome/react-fontawesome": "^0.1.12",
+    "antd": "^4.8.0",
+    "bulma": "^0.9.1",
+    "disqus": "^0.3.0",
+    "disqus-react": "^1.0.10",
     "gatsby": "^2.25.1",
     "gatsby-image": "^2.4.21",
     "gatsby-plugin-manifest": "^2.5.1",
     "gatsby-plugin-offline": "^3.3.1",
     "gatsby-plugin-react-helmet": "^3.3.14",
+    "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sass": "^2.4.2",
     "gatsby-plugin-sharp": "^2.7.0",
+    "gatsby-source-contentful": "^3.1.2",
     "gatsby-source-filesystem": "^2.4.0",
+    "gatsby-transformer-remark": "^2.9.2",
     "gatsby-transformer-sharp": "^2.5.21",
+    "html-react-parser": "^0.14.1",
+    "interweave": "^12.5.0",
+    "node-sass": "^4.14.1",
+    "particles.js": "^2.0.0",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-player": "^2.6.2",
+    "react-slick": "^0.27.12",
+    "three": "^0.122.0",
+    "vanta": "^0.5.21"
   },
   "devDependencies": {
     "prettier": "2.1.2"
